--- a/src/components/TinderCards/TinderCards.css
+++ b/src/components/TinderCards/TinderCards.css
@@ -31,5 +31,12 @@
   align-content: center;
   text-align: center;
   justify-content: center;
-  margin-top: 20vh;
+  margin-top: 2vh;
+}
+
+.emptyCardContainer > div {
+  align-self: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto
 }
