--- a/src/components/TinderCards/TinderCards.css
+++ b/src/components/TinderCards/TinderCards.css
@@ -31,14 +31,13 @@
   align-content: center;
   text-align: center;
   justify-content: center;
-  margin-top: 2vh;
 }
 
 .emptyCardContainer > div {
   align-self: center;
   display: block;
   margin-left: auto;
-  margin-right: auto
+  margin-right: auto;
 }
 
 .swipeButtons {
